--- a/resource/css/style-site.css
+++ b/resource/css/style-site.css
@@ -102,7 +102,7 @@ h2{
 }
 
 .superbanner{
-	background: #000;
+	background: #FFF;
 }
 
 .azul .carousel-control-prev-icon{
@@ -210,6 +210,10 @@ footer img{
 	height: 40px;
 }
 
+footer .caf img{
+	height: 25px;
+}
+
 .temp-caixa{
 	height: 450px;
 }
@@ -217,6 +221,7 @@ footer img{
 .temp-caixa .middle{
 	background: #EEE;
 	width: 800px;
+	background-size: 100% auto;
 }
 
 .temp-caixa .caixa{
