--- a/resource/css/style-site.css
+++ b/resource/css/style-site.css
@@ -8,7 +8,8 @@
 :root {
     --color-primary: #009b93;
     --color-secondary: #EA5B0A;
-    --color-tertiary: #f3e40e;
+
+    --color-light-gray: #f5f5f5ee;
     --color-white: #f5f5f5;
 
     --color-base: #2B4E73;
@@ -63,6 +64,7 @@ ul {
     bottom: 1rem;
     right: 1rem;
     transition: .2s;
+    z-index: 10;
 }
 
 .fa-angle-up:hover {
@@ -210,7 +212,7 @@ span {
 section {
     max-width: 70rem;
     width: 100%;
-    background-color: var(--color-white);
+    background-color: var(--color-light-gray);
     color: var(--color-base-dark);
     margin: 3rem auto;
     border-radius: 0 20px;
@@ -295,6 +297,7 @@ section:nth-child(1) {
 .dti-box {
     width: 100%;
     margin-top: .5rem;
+    background-color: var(--color-white);
 }
 
 .dti_box-title {
@@ -405,6 +408,10 @@ section:nth-child(3) {
 
 /* pesquisas */
 
+section:nth-child(4) {
+    background-color: var(--color-light-gray);
+}
+
 .pesquisas-title {
     text-align: center;
     margin-bottom: 2rem;
@@ -445,15 +452,21 @@ section:nth-child(3) {
 .pesquisas-boxes {
     display: grid;
     gap: 2rem;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     margin-bottom: 4rem;
 }
 
 .pesquisas-box {
-    height: 25rem;
+    height: 29rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    border-radius: 10px;
+    background-color: var(--color-white);
+}
+
+.pesquisas_box-title h3, .pesquisas_box-title span {
+    padding: 0 1rem;
 }
 
 .pesquisas_box-title h3 {
@@ -463,12 +476,14 @@ section:nth-child(3) {
 
 .pesquisas_box_title-bg img {
     width: 100%;
-    height: 8rem;
+    height: 13rem;
+    border-radius: 10px 10px 0 0;
 }
 
 .pesquisas_box-content {
     text-align: justify;
     color: var(--color-gray);
+    padding: 0 1rem;
 }
 
 .pesquisas-boxes a {
@@ -478,7 +493,7 @@ section:nth-child(3) {
     border: 1px solid var(--color-secondary);
     color: var(--color-white);
     padding: .5rem 0;
-    margin: .2rem 0;
+    margin: 1rem;
     width: 10rem;
     text-align: center;
     transition: .2s;
@@ -504,8 +519,9 @@ section:nth-child(3) {
 
 .prev, .pos {
     padding: 0.7rem 1rem;
-    background-color: var(--color-tertiary);
+    background-color: var(--color-white);
     color: var(--color-base-dark);
+    border: 1px solid var(--color-base-dark);
     margin: 0 1rem;
     cursor: pointer;
     user-select: none;
@@ -521,6 +537,7 @@ section:nth-child(3) {
 
     .pesquisas-boxes a {
         width: 100%;
+        margin: 1rem 0 0 0;
     }
 }
 
@@ -536,7 +553,7 @@ section:nth-child(3) {
     }
     
     .pesquisas-box {
-        height: 22rem;
+        height: 29rem;
         margin-bottom: .5rem;
     }
 
